# autilitys

./: .gitignore  LICENSE  README.md
Utility_Test/: CMakeLists.txt  CMakePresets.json  Utility_Test.sln  build.sh  main.cpp  run.sh
Utility_Test/Utility_Test/: Utility_Test.vcxproj  Utility_Test.vcxproj.filters
Utility_Test/autilitys/: aumath.h  autilitys.h  colors.h  exception.h  ptr.h  timer.h  types.h
autilitys/: aumath.h  authread.h  autilitys.h  command_line.h  common.h  filesystem.h  ini.h  logger.h  parallel_for.h  ptr.h  stringCvt.h  types.h
autils/: au_colors.h  au_command_line.h  au_common.h  au_exception.h  au_filesystem.h  au_ini.h  au_logger.h  au_math.h  au_module_def.h  au_parallel_for.h  au_protoco.h  au_ptr.h  au_shared_memory.h  au_shared_mutex.h  au_stringCvt.h  au_thread.h  au_timer.h  au_types.h  au_utils.h
